--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <style>
+      .bg-header{
+            background: linear-gradient(
+                    rgba(0, 0, 0, 0.733),
+                    rgba(0, 0, 0, 0.733)
+                ), url("img/HomePage.jpg") no-repeat;
+            background-position: center;
+            background-size: cover;
+            height: 700px;
+        }
+        section{
+            height: 700px;
+        }
+        .bg-skil{
+            background-color: #dbdada;
+        }
+        .bg-card{
+            background-color: #ffffff;
+            
+        }
+
         .card{
             border-radius: 30px;
         }
