--- a/profil.html
+++ b/profil.html
@@ -8,8 +8,15 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
-        
-        
+        .bg-header{
+            background: linear-gradient(
+                    rgba(0, 0, 0, 0.733),
+                    rgba(0, 0, 0, 0.733)
+                ), url("img/HomePage.jpg") no-repeat;
+            background-position: center;
+            background-size: cover;
+            height: 400px;
+        }        
     </style>
 </head>
 <body>
