Menambahkan CSS display-4 header pada profil.html

--- a/profil.html
+++ b/profil.html
@@ -16,7 +16,11 @@
             background-position: center;
             background-size: cover;
             height: 400px;
-        }        
+        }  
+        .display-4{
+            font-weight: bold;
+        }
+      
     </style>
 </head>
 <body>
