Menambah CSS h1 pada file profil.html

--- a/profil.html
+++ b/profil.html
@@ -20,6 +20,9 @@
         .display-4{
             font-weight: bold;
         }
+        h1{
+            font-weight: bold;
+        }
       
     </style>
 </head>
