--- a/kontak.html
+++ b/kontak.html
@@ -123,7 +123,7 @@
 
     <footer class="text-center bg-dark text-white py-3">
         <p class="font-weight-bold mb-0">
-            Copyright &copy; 2021. Nida Hanifah. All Rights Reserved.
+            Copyright &copy; 2021. Nida. All Rights Reserved.
         </p>
     </footer>
 
