Menambah komen pada file profil.html

--- a/profil.html
+++ b/profil.html
@@ -137,6 +137,8 @@
         </div>
     </section>
 
+    <!--Menambah komen-->
+
     <Section class="py-5">
         <div class="container">
             <div class="row">
